--- a/src/pages/AddVideo/AddVideo.css
+++ b/src/pages/AddVideo/AddVideo.css
@@ -28,7 +28,8 @@
 
 .butao{
     margin-top: 20px;
-    margin-left: 15px;
+    margin-left: 20px;
+    margin-right:20px;
     height: 30px;
     background-color: rgb(192, 178, 178);
     border-radius: 10%;
@@ -69,6 +70,20 @@ td, th {
     text-align: left;
     padding: 8px;
   }
+
+th{
+    margin-right: 25px;
+    margin-left: 10px;
+    width: 10px;
+}
+
+.link{
+    margin-left: 190px;
+}
+
+.name{
+    margin-left: 100px;
+}
 
 .tabela {
     display: flex;
