--- a/src/pages/AddCategory/AddVideo.css
+++ b/src/pages/AddCategory/AddVideo.css
@@ -98,7 +98,7 @@
 
 .input:focus{
     background-color: rgba(128, 128, 128, 0.3);
-    width: 350px;
+    width: 300px;
 }
 
 .exceed{
@@ -116,7 +116,7 @@
 }
 
 #textarea:focus{
-    width: 350px;
+    width: 300px;
 }
 
 .centered{
@@ -169,4 +169,16 @@
 .send{
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.supreme-table{
+    display: flex;
+    justify-content: center;
+
+    width: 500px;
+}
+
+.table-helper{
+    
+    width: 300px;
 }
