--- a/src/pages/AddCategory/AddVideo.css
+++ b/src/pages/AddCategory/AddVideo.css
@@ -124,6 +124,18 @@
     justify-content: center;
 }
 
+.supreme-table{
+    display: flex;
+    justify-content: center;
+
+    width: 500px;
+}
+
+.table-helper{
+    
+    width: 300px;
+}
+
 
 @media (max-width: 800px) {
     .Container{
@@ -148,11 +160,11 @@
 
     .input:focus{
         background-color: rgba(128, 128, 128, 0.3);
-        width: 200px;
+        width: 220px;
     }
 
     #textarea:focus{
-        width: 200px;
+        width: 220px;
     }
     
     .Supreme-Container-Leader{
@@ -160,7 +172,20 @@
     }
 
     .Categories-container{
-        width: 200px;
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .supreme-table{
+        display: flex;
+        justify-content: left;
+        width: 300px;
+    }
+    
+    .table-helper{
+        width: 300px;
     }
     
     
@@ -171,14 +196,3 @@
     margin-bottom: 10px;
 }
 
-.supreme-table{
-    display: flex;
-    justify-content: center;
-
-    width: 500px;
-}
-
-.table-helper{
-    
-    width: 300px;
-}
