--- a/src/pages/AddVideo/AddVideo.css
+++ b/src/pages/AddVideo/AddVideo.css
@@ -58,6 +58,16 @@
 
 .button_submit{
     margin-top: 30px;
+    color: var(--white);
+    border: 1px solid var(--white);
+    font-weight: bold;
+    font-size: 12px;
+    border-radius: 4px;
+    
+    padding: 8px 12px;
+    text-decoration: none;
+    background-color: black;
+    transition: opacity .3s;
 }
 
 .input_name{
